# lrai_locate_anything

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: LocateAnything_3B_TensorRT.ipynb  colab_isp_audit.py  colab_trt_engine_inspect.py  learn02_polygraphy_llm_decode.txt  learn02_polygraphy_llm_decode_ar.txt  learn02_polygraphy_llm_prefill.txt  locany_registry_inserts.sql  locany_registry_prod_inserts.sql  lrai_locate_anything_demo.ipynb  phase_d_moonvit_port_delta.md  single_file_trt_design.md  trtllm_adoption_design.md
examples/: run_compare.py  run_image.py  run_video.py
lrai_locate_anything/: __init__.py  benchmark.py  config.py  model_loader.py  orchestrator.py  parse.py  patches.py  pipelines.py  shims.py
lrai_locate_anything/audit/: __init__.py
lrai_locate_anything/audit/trackerbot_compat/: SOURCE.md  __init__.py  bytetrack.py
lrai_locate_anything/export/: __init__.py  int4.py  llm.py  projector.py  vision.py
lrai_locate_anything/export_prod/: __init__.py  llm_unified.py  vision_proj.py
lrai_locate_anything/trt/: __init__.py  build.py  engine.py
lrai_locate_anything/trt/plugins/: BUILD.md  packed_varlen_attn_plugin.cu
lrai_locate_anything/trt_prod/: __init__.py  build_unified.py
lrai_locate_anything/trtllm/: __init__.py  convert.py  install.py  runner.py
lrai_locate_anything/trtllm_prod/: __init__.py  build.py  convert.py  modeling_moonvit.py  moonvit_adapter.py  runner.py
scripts/: colab_deploy.py  learn02_bootstrap_and_run.sh  lrai_isp_audit.py  lrai_isp_audit_dualgpu.sh  lrai_trt_verify_multigpu.py  patch_locateanything_config_for_trtllm.py  trtllm_env.sh  verify_trtllm_audit_e2e.sh
tests/: conftest.py  test_canonicalize_prompt.py  test_config.py  test_export_wrappers.py  test_integration.py  test_letterbox.py  test_lm_head_tie.py  test_model_loader.py  test_moonvit_hf_parity.py  test_moonvit_parity.py  test_orchestrator_tid.py  test_parse.py  test_patches.py  test_pipelines.py  test_shims.py  test_trt_engine.py  test_trtllm_install.py  test_trtllm_prod_scaffold.py  test_vision_proj_parity.py
