[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lrai_locate_anything"
version = "0.1.0"
description = "Modular runtime for NVIDIA LocateAnything-3B: ONNX export, TensorRT engines, PBD orchestrator, video inference."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dean Webb", email = "dean.webb@livereach.ai" }]
keywords = ["vision-language", "tensorrt", "onnx", "vlm", "grounding", "detection", "nvidia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Environment :: GPU :: NVIDIA CUDA",
]

# Dependencies are intentionally minimal. Most Colab / modern PyTorch CUDA images
# already ship: torch, transformers, accelerate, safetensors, huggingface_hub,
# Pillow, numpy, opencv, einops, sentencepiece. Adding them as hard deps forces
# pip to consider upgrades, which (with --force-reinstall) cascades and breaks
# the host's pre-existing scientific stack. We DECLARE only what's load-bearing
# at runtime AND not commonly pre-installed; remaining runtime deps (NVIDIA
# stack, decord, lmdb, etc.) are added on demand via ensure_nvidia_stack() and
# ensure_runtime_deps().
dependencies = [
    "torch>=2.4",
    # transformers >=5.0 silently fails to fill embed_tokens.weight and
    # lm_head.weight from the safetensors checkpoint for this vendored model
    # (Materializing progress reports success, missing_keys=[], but the actual
    # values stay at random init -> universal mode-collapse). 4.55-4.57 work.
    "transformers>=4.55,<5.0",
    "huggingface_hub>=0.24,<1.0",
    "peft>=0.10,<0.13",
    "einops",
    "Pillow",
    "onnx",
]

[project.optional-dependencies]
trt = [
    "tensorrt>=10.15,<11",
    "tensorrt-cu12>=10.15,<11",
    "cuda-python>=12.6,<13",
]
int4 = ["nvidia-modelopt[torch]"]
# TRT-LLM is an OPTIONAL accelerator. Install via the install_trtllm() helper
# rather than pip extras — the wheel matching the active PyTorch version
# changes per release, so we probe at install time.
trtllm-marker = []
dev = ["pytest", "ruff", "black"]

[project.urls]
Repository = "https://github.com/deanofthewebb/lrai_locate_anything"
Issues = "https://github.com/deanofthewebb/lrai_locate_anything/issues"

[tool.setuptools.packages.find]
include = ["lrai_locate_anything*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "gpu: requires CUDA-capable GPU",
    "trt: requires tensorrt installed",
    "trtllm: requires tensorrt_llm installed",
    "heavy: requires full LocateAnything-3B model (set LRAI_RUN_HEAVY=1 to enable)",
]
